--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     ],
     "require": {
         "php": "^7.1.3",
-        "illuminate/support": "5.5.*|5.6.*|5.7.*|5.8.*|6.*",
+        "illuminate/support": "5.5.*|5.6.*|5.7.*|5.8.*|^6.0",
         "erusev/parsedown-extra": "^0.7.1"
     },
     "config": {
