--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,9 @@
         }
     ],
     "require": {
-        "php": "^7.1.3",
-        "illuminate/support": "5.5.*|5.6.*|5.7.*|5.8.*|^6.0",
-        "erusev/parsedown-extra": "^0.7.1"
+        "php": "^7.2.5",
+        "illuminate/support": "5.6.*|5.7.*|5.8.*|^6.0|^7.0",
+        "erusev/parsedown-extra": "^0.8.1"
     },
     "config": {
         "optimize-autoloader": true,
