--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,8 @@
         }
     ],
     "require": {
-        "php": "^7.2.5",
-        "illuminate/support": "5.6.*|5.7.*|5.8.*|^6.0|^7.0",
+        "php": "^7.2.5|^8.0",
+        "illuminate/support": "5.6.*|5.7.*|5.8.*|^6.0|^7.0|^8.0",
         "erusev/parsedown-extra": "^0.8.1"
     },
     "config": {
